
  * forest.netsplit():
    - show prediction intervals as colored bars
    - forest plot with layout 'subgroups by comparisons':
      omit treatment estimates in rows with prediction intervals if
      network estimates are also shown

  * netcomb() and discomb():
    - argument 'seq.components' replaced with 'seq.comps'

  * discomb():
    - arguments 'reference.group' and 'baseline.reference'
    
 ** Bug fixes **

  * netsplit():
    - do not reorder a treatment comparison if reference treatment
      (argument 'reference.group') is part of a combined treatment,
      e.g., for reference.group = "A" and treatment comparison "A + B"
      vs "C", the comparison will not be reordered as "C" vs "A + B"

  * forest.netsplit():
    - show correct prediction intervals

  * netgraph():
    - arguments 'iterate' and 'allfigures' ignored if argument 'seq'
      is equal to "optimal"
      
  * netsplit():
    - consider argument 'digits' for treatment estimates, i.e., do not
      always round to two digits

 ** Internal changes **

  * netmeta():
    - keep original order of studies in list element 'data'

  * netcomb() and discomb():
    - check if argument 'sep.components' is a single character
    - similar list elements as for R objects created with netmeta();
      especially matrices with all network estimates added to output,
      see, for example, new list elements 'TE.fixed' and 'TE.random'

  * Internal function nma.additive():
    - calculate matrices with all network estimates

  * netleague() is a generic function

  * Help pages:
    - examples added for forest.netsplit()


*** netmeta, version 0.9-8, 2018-03-23 ***

 ** Major changes **

  * Main function netmeta():
    - by default, results for fixed effects and random effects network
      meta-analysis are reported (only results for fixed effects model
      were reported in older versions)
    - keep dataset used to conduct network meta-analysis